fix text-input button (no visible text while in light-mode)

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -45,16 +45,22 @@
 }
 
 .text-input {
+  padding: .5em;
   box-sizing: border-box;
   border: 0;
-  border-radius: 3px;
-  border: 2px solid #CCC;
+  border-radius: 12px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+  transition: box-shadow 0.3s ease;
+  font-family: Inter, sans-serif;
   font-size: 1em;
-  padding: .5em;
-  background-color: transparent;
+  background-color: #fff;
   outline: none;
 }
-
+@media (prefers-color-scheme: dark) {
+  .text-input {
+    background-color: #303030;
+  }
+}
 
 .buy-button {
   cursor: pointer;
